[gd_scene load_steps=22 format=3 uid="uid://bdihjy6da3ag6"]

[ext_resource type="Texture2D" uid="uid://mn4iw3qp0w7r" path="res://Background/background-day.png" id="1_8dwdx"]
[ext_resource type="Script" path="res://main.gd" id="1_kbjvr"]
[ext_resource type="Script" path="res://Background/infinite_scroll.gd" id="3_1pynh"]
[ext_resource type="Texture2D" uid="uid://mplvmrwcoe3d" path="res://Background/base.png" id="3_53bcx"]
[ext_resource type="Texture2D" uid="uid://bp61q6froip3e" path="res://message.png" id="4_jt5sv"]
[ext_resource type="PackedScene" uid="uid://fjuwvwcxm03d" path="res://Player/player.tscn" id="6_k7p6c"]
[ext_resource type="Texture2D" uid="uid://7j1urs5eie2n" path="res://Game Over/gameover.png" id="6_qacca"]
[ext_resource type="Script" path="res://Player/player.gd" id="7_8tdv2"]
[ext_resource type="Script" path="res://Game Over/GameOver.gd" id="7_ellrt"]
[ext_resource type="AudioStream" uid="uid://ckow2h270m8xa" path="res://Game Over/swoosh.ogg" id="8_5din3"]
[ext_resource type="Texture2D" uid="uid://ddyccsffhh4t6" path="res://ScoreBoard/score-display-panel.png" id="9_0de5b"]
[ext_resource type="Script" path="res://ScoreBoard.gd" id="10_ixb5j"]
[ext_resource type="Texture2D" uid="uid://bv56ofisphnc0" path="res://ScoreBoard/medal.png" id="10_o6fyo"]
[ext_resource type="Script" path="res://Score/Score.gd" id="11_mf4xe"]
[ext_resource type="FontFile" uid="uid://cg2g10xh4qusw" path="res://digits-large.png" id="12_5dvd7"]
[ext_resource type="Texture2D" uid="uid://che7kc03uctp3" path="res://icon-button-start.png" id="13_2ug7a"]
[ext_resource type="Texture2D" uid="uid://xuljg2sop5we" path="res://icon-button-start-pressed.png" id="14_k34ao"]

[sub_resource type="GDScript" id="GDScript_4juxc"]
script/source = "extends Timer

var pipe_scene = preload(\"res://Pipes/pipes.tscn\")

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="LabelSettings" id="LabelSettings_8mylr"]
font = ExtResource("12_5dvd7")
font_size = 9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lypj"]
size = Vector2(287.75, 129.5)

[sub_resource type="LabelSettings" id="LabelSettings_vbroe"]
font = ExtResource("12_5dvd7")
font_size = 24
shadow_size = 0
shadow_color = Color(0.847059, 0, 0, 0)

[node name="Root" type="Node2D"]
script = ExtResource("1_kbjvr")

[node name="PipeGenerator" type="Timer" parent="."]
wait_time = 2.0
script = SubResource("GDScript_4juxc")

[node name="Backgrounds" type="Node2D" parent="."]
position = Vector2(144, 256)

[node name="Background1" type="Sprite2D" parent="Backgrounds" groups=["backgrounds"]]
texture_filter = 1
position = Vector2(145, 0)
texture = ExtResource("1_8dwdx")
script = ExtResource("3_1pynh")

[node name="Background2" type="Sprite2D" parent="Backgrounds" groups=["backgrounds"]]
texture_filter = 1
position = Vector2(721, 0)
texture = ExtResource("1_8dwdx")
script = ExtResource("3_1pynh")

[node name="Ground1" type="Sprite2D" parent="Backgrounds" groups=["backgrounds"]]
z_index = 5
texture_filter = 1
position = Vector2(361, 199)
texture = ExtResource("3_53bcx")
script = ExtResource("3_1pynh")
speed = -100

[node name="Ground2" type="Sprite2D" parent="Backgrounds" groups=["backgrounds"]]
z_index = 5
texture_filter = 1
position = Vector2(25, 199)
texture = ExtResource("3_53bcx")
script = ExtResource("3_1pynh")
speed = -100

[node name="GetReady" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(144, 208)
texture = ExtResource("4_jt5sv")

[node name="GameOver" type="Sprite2D" parent="."]
z_index = 15
texture_filter = 1
position = Vector2(144, 150)
texture = ExtResource("6_qacca")
script = ExtResource("7_ellrt")

[node name="Swoosh" type="AudioStreamPlayer2D" parent="GameOver"]
position = Vector2(-144, -150)
stream = ExtResource("8_5din3")
volume_db = 10.0

[node name="ShowTimer" type="Timer" parent="GameOver"]
wait_time = 0.25
one_shot = true

[node name="ScoreBoard" type="Sprite2D" parent="."]
z_index = 15
texture_filter = 1
position = Vector2(144, 573)
scale = Vector2(2, 2)
texture = ExtResource("9_0de5b")
script = ExtResource("10_ixb5j")

[node name="Medal" type="Sprite2D" parent="ScoreBoard"]
visible = false
position = Vector2(-32, 3)
texture = ExtResource("10_o6fyo")

[node name="Score" type="Label" parent="ScoreBoard"]
offset_left = 20.5
offset_top = -11.5
offset_right = 46.5
offset_bottom = -1.5
pivot_offset = Vector2(13, 21)
text = "0"
label_settings = SubResource("LabelSettings_8mylr")
horizontal_alignment = 2

[node name="BestScore" type="Label" parent="ScoreBoard"]
offset_left = 20.5
offset_top = 8.5
offset_right = 46.5
offset_bottom = 18.5
text = "0"
label_settings = SubResource("LabelSettings_8mylr")
horizontal_alignment = 2

[node name="ShowTimer" type="Timer" parent="ScoreBoard"]
wait_time = 0.75
one_shot = true

[node name="ScoreCount" type="Timer" parent="ScoreBoard"]
wait_time = 0.05

[node name="StartButton" type="TextureButton" parent="ScoreBoard"]
visible = false
texture_filter = 1
offset_left = -20.0
offset_top = 36.0
offset_right = 20.0
offset_bottom = 50.0
texture_normal = ExtResource("13_2ug7a")
texture_pressed = ExtResource("14_k34ao")
texture_hover = ExtResource("13_2ug7a")
texture_disabled = ExtResource("13_2ug7a")
texture_focused = ExtResource("13_2ug7a")

[node name="Player" parent="." instance=ExtResource("6_k7p6c")]
z_index = 10
texture_filter = 1
position = Vector2(89, 247)
script = ExtResource("7_8tdv2")

[node name="Ground" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(144.125, 449.75)
shape = SubResource("RectangleShape2D_1lypj")

[node name="Score" type="Label" parent="."]
z_index = 10
texture_filter = 1
offset_left = 1.0
offset_top = 7.0
offset_right = 288.0
offset_bottom = 31.0
text = "0"
label_settings = SubResource("LabelSettings_vbroe")
horizontal_alignment = 1
script = ExtResource("11_mf4xe")

[connection signal="flap" from="." to="Player" method="_on_root_flap"]
[connection signal="timeout" from="PipeGenerator" to="." method="create_pipe"]
[connection signal="timeout" from="GameOver/ShowTimer" to="GameOver" method="_show_game_over"]
[connection signal="timeout" from="ScoreBoard/ShowTimer" to="ScoreBoard" method="_slide_up"]
[connection signal="timeout" from="ScoreBoard/ScoreCount" to="ScoreBoard" method="_on_score_count_timeout"]
[connection signal="pressed" from="ScoreBoard/StartButton" to="." method="_restart_game"]
[connection signal="first_flap_signal" from="Player" to="." method="_start_game"]
[connection signal="hit_ground_signal" from="Player" to="." method="_on_player_hit_ground"]
[connection signal="hit_pipe_signal" from="Player" to="." method="_on_player_hit_pipe"]
[connection signal="inc_score_signal" from="Player" to="Score" method="_on_player_inc_score_signal"]
[connection signal="body_entered" from="Ground" to="Player" method="_on_ground_body_entered"]
